1.4.12 (not yet released):
- Fix the confusion between db_type and oda_type when getting data from the
OSCAR configuration file (reported by Olivier Lahaye).
- Revisit the initialization of the database: move some tasks that are not ODA
specific outside of the ODA bootstrapping capability (reported by Olivier
Lahaye).

1.4.11:
- Make sure the client's hostname is set (patch from Olivier Lahaye).

1.4.10:
- Fix a SQL syntax error when updating a table (patch from Olivier Lahaye).
- Fix a problem when deleting OPKG configuration values (patch from Olivier
Lahaye).

1.4.9:
- Improve output.
- Return an error code when the connection to the database fails.

1.4.8:
- Improve the "make clean" capability.
- Add a dependency to ORM for both RPMs and .debs.

1.4.7:
- [Ticket #430] Avoid misleading message when drop the database in
non-interactive mode.
- Code cleaning-up.

1.4.6:
- Better handling of errors.
- Fix the Debian copyright.
- Modification of the spec so we can create the RPM on FC11 (patch from 
Christophe Trophime).

1.4.5:
- Include perldoc documentation for OSCAR::ODA_Defs.
- Add a new function to get the list of all selected OPKGs (avoid code
duplication in other OSCAR components).

1.4.4:
- Make sure the make_database_password script will not fail without perl-Tk
(which happens if users only want to use the CLI).
- Continue to improve error handling.
- During initialization, make sure we execute the set_global_oscar_values
script.
- get_opkg_selection_data can now return the data for all selected OPKGs.

1.4.3:
- Update the list of prereqs for ubuntu.
- Explicitely restart the MYSQL service before to actually initialize the 
database.
- Make some return codes more coherent.

1.4.2:
- Fix the query to get the list of selected OPKGs.
- Improved error handling.

1.4.1:
- Before to reset ODA, we try to start the database daemon so we are sure we
can actually try to delete the OSCAR database.