@@ -4,6 +4,7 @@ OSCAR configuration file (reported by Olivier Lahaye).
 - Revisit the initialization of the database: move some tasks that are not ODA
 specific outside of the ODA bootstrapping capability (reported by Olivier
 Lahaye).
+- Handle db services through OSCAR::SystemServices.
 
 1.4.11:
 - Make sure the client's hostname is set (patch from Olivier Lahaye).
